[tool.poetry]
name = "laminate"
version = "0.1.0"
description = ""
authors = ["circleci <kgrid-developers@umich.edu>"]
readme = "README.md"
packages = [{include = "laminate", from = "src"}]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
