[tool.poetry]
name = "laminate"
version = "0.1.0"
description = ""
authors = ["Peter Boisvert <pboisver@umich.edu>"]
readme = "README.md"
packages = [{include = "laminate", from = "src"}]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.0"
gunicorn = "^22.0.0"

[tool.poetry.group.dev.dependencies]
poethepoet = "^0.26.1"

[tool.poe.tasks]
reqs = [
    {shell = "poetry export --without-hashes   >requirements.txt"},
    {shell = "echo '.' >>requirements.txt"}
    ]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
